# icpc-jdcs

./: README.md  icpc-jdcs.cabal
src/: App.hs  Main.hs  Model.hs  Utils.hs
template/: admin.hamlet  index.hamlet  setcontest.hamlet
