name:                icpc-jdcs
version:             0.1.0.0

homepage:            https://github.com/githubuser/icpc-jdcs#readme
license:             MIT
license-file:        LICENSE
author:              asi1024
maintainer:          asi1024@kmc.gr.jp
copyright:           2017 asi1024
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App Model Utils
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base64-bytestring
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , conduit
                     , data-default
                     , directory
                     , filepath
                     , http-conduit
                     , http-types
                     , old-locale
                     , mtl
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , process
                     , resourcet
                     , shakespeare
                     , text
                     , time
                     , transformers
                     , scotty
                     , stm
                     , wai-extra
                     , wai-middleware-static
                     , xml
  default-language:    Haskell2010

executable icpc-jdcs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , icpc-jdcs
  default-language:    Haskell2010

test-suite icpc-jdcs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , icpc-jdcs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/icpc-jdcs
